--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="user-scalable=no,width=device-width,initial-scale=1,maximum-scale=1"><meta property=og:image content=https://s3-us-west-2.amazonaws.com/grape-king/grape-og-image.png><title>我的健康微型展</title><style type=text/css>body {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="user-scalable=no,width=device-width,initial-scale=1,maximum-scale=1"><meta property=og:image content=https://s3-us-west-2.amazonaws.com/grape-king/grape-og-image.png><link rel=icon type=image/png href=/grapeking_icon.png><title>我的健康微型展</title><style type=text/css>body {
         width: 100vw;
         height: 100vh;
         margin: 0;
